--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -79,11 +79,11 @@ jobs:
       - name: Deploy
         run: echo "Deploying..."
   report:
-    needs: [lint,deploy] 
-    if: failure()  
+    needs: [lint, deploy]
+    if: failure()
     runs-on: ubuntu-latest
     steps:
       - name: Output information
-        run: |
-          echo "Somthing went wrong"
+        run: | 
+          echo "Something went wrong"
           echo "${{ toJSON(github) }}"
