added include and exclude

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -5,8 +5,14 @@ jobs:
     continue-on-error: true
     strategy:
        matrix:
-         node-version: [12,14,15]   
+         node-version: [12,14,16]   
          operation-system: [ubuntu-latest, windows-latest]
+         include:
+           - node-version: 18
+             operation-system: ubuntu-latest
+         exclude:
+           - node-version: 12
+             operation-system: windows-latest
     runs-on: ${{ matrix.operation-system }}
     steps:
        - name: Get code
